# rpy-intel

./: .coverage  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: demo1.R
src/rpy_intel/: cli.py  emitter_py.py  ir.py  mappings.py  r_parser.py
tests/: test_smoke.py
